Fix poster being stretched

--- a/src/sass/components/poster.scss
+++ b/src/sass/components/poster.scss
@@ -6,7 +6,7 @@
     background-color: #000;
     background-position: 50% 50%;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
+    background-size: contain;
     height: 100%;
     left: 0;
     opacity: 0;
